@@ -1,3 +1,8 @@
+2008-12-26 Richard Dale <richard.j.dale@gmail.com>
+* Stateless slots cannot have any arguments, however they can be connected to
+signals which have arguments. So when an EventSignal is connected to a slot
+with arity zero then check for whether the slot is stateless.
+
 2008-12-24 Richard Dale <richard.j.dale@gmail.com>
 * Added an ancestors() method for the Wt:: classes
 * Rename classnameMap as IdToClassNameMap to be consist with QtRuby
